edited readme and added favicon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       content="homestay, kampala, farm, relaxation, holiday, Uganda, resort"
     />
     <meta name="author" content="Owen's Homestay Resort" />
+
     <!--Title-->
+
     <title>Owen's Homestay Resort</title>
   </head>
 
@@ -24,15 +26,18 @@
       <h1>Welcome to Owen's Homestay Resort</h1>
       <p>A countryside home environment for your relaxation.</p>
     </header>
+
+    <!--Insert navigation bar-->
+    <nav>
+      <a href="#about">About us</a>
+      <a href="#activities">Activities</a>
+      <a href="#accomodation">Accomodation</a>
+      <a href="#gallery" target="_blank">Gallery</a>
+      <a href="#contact">Contact us</a>
+    </nav>
+
     <!--Main Content -->
     <main>
-      <nav>
-        <a href="#about">About us</a>
-        <a href="#activities">Activities</a>
-        <a href="#accomodation">Accomodation</a>
-        <a href="#gallery" target="_blank">Gallery</a>
-        <a href="#contact">Contact us</a>
-      </nav>
       <!--About us section starts here-->
 
       <section id="about">
@@ -264,7 +269,11 @@
         <hr />
       </section>
       <footer>
-        <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank">Twitter</a
+        <a
+          href="https://twitter.com/"
+          aria-label="Go to our Twitter page (opens in new tab)"
+          target="_blank"
+          >Twitter</a
         >
         <a
           href="https://www.instagram.com/"
