--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="build-assets/css/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="build-assets/css/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest" />
+    <!--stylesheet-->
+    <link rel="stylesheet" href="build-assets/css/style.css">
 </head>
 
 <body>
