edited readme text to add wireframes. edited the stylesheet link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="build-assets/css/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest" />
     <!--stylesheet-->
-    <link rel="stylesheet" href="build-assets/css/style.css">
+    <link rel="stylesheet" href=".devcontainer/build-assets/css/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <a href="#about">About us</a>
         <a href="#activities">Activities</a>
         <a href="#accomodation">Accomodation</a>
-        <a href="#gallery" target="_blank">Gallery</a>
+        <a href="#gallery">Gallery</a>
         <a href="#contact">Contact us</a>
     </nav>
 
