edited meta syntax

--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--metadata for search engine optimization-->
     <meta name="description" content="Owen's Homestay Resort is holiday and relaxation destination in Uganda providing a home environment. 
-    It is located on a 20 acre farm, about 50 Km north of the capital Kampala." />
-    <meta name="keywords" content="homestay, kampala, farm, relaxation, holiday, Uganda, resort" />
-    <meta name="author" content="Owen's Homestay Resort" />
+    It is located on a 20 acre farm, about 50 Km north of the capital Kampala.">
+    <meta name="keywords" content="homestay, kampala, farm, relaxation, holiday, Uganda, resort">
+    <meta name="author" content="Owen's Homestay Resort">
 
     <!--Insert a title here-->
     <title>Owen's Homestay Resort</title>
     <!--Insert favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="build-assets/css/favicon_io/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="build-assets/css/favicon_io/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="build-assets/css/favicon_io/favicon-16x16.png" />
-    <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href=" .devcontainer/build-assets/css/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href=".devcontainer/build-assets/css/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href=".devcontainer/build-assets/css/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest">
     <!--stylesheet-->
     <link rel="stylesheet" href=".devcontainer/build-assets/css/style.css">
 </head>
