changed path of assets folder and edited readme

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!--Insert a title here-->
     <title>Owen's Homestay Resort</title>
     <!--Insert favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href=" .devcontainer/build-assets/css/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href=".devcontainer/build-assets/css/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href=".devcontainer/build-assets/css/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest">
     <!--stylesheet-->
-    <link rel="stylesheet" href=".devcontainer/build-assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
