add Open Sans to body styles

--- a/index.html
+++ b/index.html
@@ -18,30 +18,28 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest">
     <!--stylesheet-->
-    <link rel="stylesheet" href= "assets/css/style.css"> 
-
-<body>
+    <link rel="stylesheet" href="assets/css/style.css">
     <!--header-->
     <header>
         <h1>Welcome to Owen's Homestay Resort</h1>
         <p>A countryside home environment for your relaxation.</p>
+        <!--Insert navigation bar-->
+        <nav>
+            <a href="#about">About us</a>
+            <a href="#activities">Activities</a>
+            <a href="#accomodation">Accomodation</a>
+            <a href="#gallery">Gallery</a>
+            <a href="#contact">Contact us</a>
+        </nav>
     </header>
+</head>
 
-    <!--Insert navigation bar-->
-    <nav>
-        <a href="#about">About us</a>
-        <a href="#activities">Activities</a>
-        <a href="#accomodation">Accomodation</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact us</a>
-    </nav>
-    </head>
+<!--Main Content -->
+<main>
 
-
-    <!--Main Content -->
-    <main>
+    <body>
         <!--About us section starts here-->
-
+        
         <section id="about">
             <h2>About us</h2>
             <p>
@@ -229,19 +227,18 @@
 
         </section>
 
-    </main>
+</main>
 
-    <!--Footer section starts here-->
+<!--Footer section starts here-->
 
-    <footer>
-        <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)"
-            target="_blank">Twitter</a>
-        <a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
-            target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)"
-            target="_blank">Facebook</a>
-        <p>&copy Owen's Homestay Resort</p>
-    </footer>
+<footer>
+    <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank">Twitter</a>
+    <a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
+        target="_blank">Instagram</a>
+    <a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)"
+        target="_blank">Facebook</a>
+    <p>&copy Owen's Homestay Resort</p>
+</footer>
 </body>
 
 </html>
