--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!--header-->
     <header>
-        <h1>Welcome to Owen's Homestay Resort</h1>
-        <p>A countryside home environment for your relaxation.</p>
+        <a href="index.html">
+            <h1 id="logo">Owen's Homestay Resort</h1>
+        </a>
         <!--Insert navigation bar-->
         <nav>
-            <a href="#about">About us</a>
-            <a href="#activities">Activities</a>
-            <a href="#accomodation">Accomodation</a>
+            <a href="#home">Home</a>
             <a href="#gallery">Gallery</a>
             <a href="#contact">Contact us</a>
         </nav>
@@ -39,7 +38,7 @@
 
     <body>
         <!--About us section starts here-->
-        
+
         <section id="about">
             <h2>About us</h2>
             <p>
