format nav element

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
         <!--Insert navigation bar-->
-        <nav>
+        <nav id ="menu">
             <a href="#home">Home</a>
             <a href="#gallery">Gallery</a>
-            <a href="#contact">Contact us</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 </head>
