--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <!--Insert navigation bar-->
         <nav id ="menu">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#gallery">Gallery</a>
             <a href="#contact">Contact</a>
         </nav>
