format nav element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
         <!--Insert navigation bar-->
-        <nav id ="menu">
+        <nav id="menu">
             <a href="#home" class="active">Home</a>
             <a href="#gallery">Gallery</a>
             <a href="#contact">Contact</a>
@@ -89,12 +89,9 @@
                 </p>
             </aside>
 
-            <ol type="1">
-                <li>
-                    Standard Cottage <br />
-                    Features:
-                </li>
-
+            <div>
+                <h3>Standard Cottage</h3>
+                <p>Features:</p>
                 <ul>
                     <li>King size bed</li>
                     <li>Ensuite bathroom</li>
@@ -107,28 +104,25 @@
                     <li>WiFi</li>
                     <li>DSTV</li>
                 </ul>
+            </div>
 
-                <br />
+            <div>
 
-                <li>
-                    Family Cottage <br />
-                    Features:
-                </li>
+                <h3>Family Cottage</h3>
 
+                <p>Features:</p>
                 <ul>
                     <li>1 bedroom with King size bed</li>
                     <li>2 rooms with a Full Double size bed</li>
                     <li>Ensuite bathroom</li>
-                    <li>
-                        Private Kitchen with modern appliances (Gas cooker+electric oven,
-                        dishwasher)
-                    </li>
+                    <li>Private Kitchen with modern appliances</li>
                     <li>Washing machine</li>
                     <li>Living area</li>
                     <li>WiFi</li>
                     <li>DSTV</li>
                 </ul>
-            </ol>
+            </div>
+
         </section>
         <!--Insert a form for reservation of accomodation-->
         <h3><em>Reservations:</em></h3>
