changed nav elemet to list and styled

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
         <!--Insert navigation bar-->
-        <nav id="menu">
-            <a href="#home" class="active">Home</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#contact">Contact</a>
+        <nav>
+            <ul id="menu">
+                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li> <a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
 </head>
