--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a href="index.html">
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
+        <input type ="checkbox" id="nav-toggle-label" name="nav-toggle">
+        <label for ="nav-toggle" class="nav-toggle-label" >X</label>
+
         <!--Insert navigation bar-->
         <nav>
             <ul id="menu">
@@ -124,7 +127,7 @@
                     <li>DSTV</li>
                 </ul>
             </div>
-            
+
         <!-- Images for the gallery section to be placed here.-->
 
         <section id="gallery">
