--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="index.html">
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
-        <input type ="checkbox" id="nav-toggle-label" name="nav-toggle">
-        <label for ="nav-toggle" class="nav-toggle-label" >X</label>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
 
         <!--Insert navigation bar-->
         <nav>
