add links to footer

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     <link rel="manifest" href="build-assets/css/favicon_io/site.webmanifest">
     <!--stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
     <!--header-->
     <header>
         <a href="index.html">
             <h1 id="logo">Owen's Homestay Resort</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
 
         <!--Insert navigation bar-->
         <nav>
@@ -36,12 +39,9 @@
             </ul>
         </nav>
     </header>
-</head>
 
-<!--Main Content -->
-<main>
-
-    <body>
+    <!--Main Content -->
+    <main>
         <!--About us section starts here-->
 
         <section id="about">
@@ -127,6 +127,7 @@
                     <li>DSTV</li>
                 </ul>
             </div>
+        </section>
 
         <!-- Images for the gallery section to be placed here.-->
 
@@ -190,18 +191,26 @@
 
         </section>
 
-</main>
+    </main>
 
-<!--Footer section starts here-->
+    <!--Footer section starts here-->
 
-<footer>
-    <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank">Twitter</a>
-    <a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
-        target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)"
-        target="_blank">Facebook</a>
-    <p>&copy Owen's Homestay Resort</p>
-</footer>
+    <footer>
+        <ul>
+            <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank"
+                rel="noopener"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
+                target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)" target="_blank"
+                rel="noopener"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/" aria-label="Go to our YouTube page (opens in new tab)" target="_blank"
+                rel="noopener"><i class="fa-brands fa-youtube"></i></a>
+
+            <p>&copy Owen's Homestay Resort</p>
+        </ul>
+    </footer>
+    <!--Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/2e188f5644.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
