edit and align copyrignt text in footer

--- a/index.html
+++ b/index.html
@@ -196,18 +196,22 @@
     <!--Footer section starts here-->
 
     <footer>
-        <ul>
-            <a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank"
-                rel="noopener"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
-                target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)" target="_blank"
-                rel="noopener"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.youtube.com/" aria-label="Go to our YouTube page (opens in new tab)" target="_blank"
-                rel="noopener"><i class="fa-brands fa-youtube"></i></a>
-
-            <p>&copy Owen's Homestay Resort</p>
+        <ul id="social-networks">
+            <li><a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank"
+                    rel="noopener"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/" aria-label="Go to our Instagram page (opens in new tab)"
+                    target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" aria-label="Go to our Facebook page (opens in new tab)"
+                    target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.youtube.com/" aria-label="Go to our YouTube page (opens in new tab)"
+                    target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
+
+        <div class="copyright">
+            <p class="copyright-jessica">Copyright &copy; 2023 Owen's Homestay Resort</p>
+          </div>
+        
+
     </footer>
     <!--Font Awesome kit-->
     <script src="https://kit.fontawesome.com/2e188f5644.js" crossorigin="anonymous"></script>
