--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
         <!--Insert navigation bar-->
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
-                <li> <a href="Contact.html">Contact</a></li>
+                <li> <a href="Contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
