--- a/gallery.html
+++ b/gallery.html
@@ -33,8 +33,8 @@
         <!--Insert navigation bar-->
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Gallery.html" class="active">Gallery</a></li>
                 <li> <a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
