edite nav links

--- a/contact.html
+++ b/contact.html
@@ -34,120 +34,13 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li> <a href="Contact.html" class="active">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li> <a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--Main Content -->
-    <main>
-        <!--About us section starts here-->
-
-        <section id="about">
-            <h2>About us</h2>
-            <p>
-                Owen's Homestay Resort provides a comfortable, down-to-earth relaxing
-                home feel for a refreshing holiday experience. Located on a 20-acre
-                mixed farm, about 50 Km North of Kampala Capital City, Owen's Homestay
-                Resort offers tranquility away from the hustle and bustle of city.
-                Visit our <a href="#activities">activities</a>
-                section to explore available activities that might interest you during
-                your stay.
-            </p>
-
-            <div>
-                <figure>
-                    <img src="" />
-                    <figcaption>Mango trees at Owen's Homestay</figcaption>
-                </figure>
-            </div>
-        </section>
-        <!--About us section ends here-->
-
-        <!--Activities section starts here-->
-
-        <section id="activities">
-            <h2>Activities</h2>
-            <p>
-                Whether you want to relax and enjoy the sun or discover what the farm
-                has to offer, there are several stress-free activities to keep you
-                engaged with nature in relaxed environment. These include:
-            </p>
-            <ul>
-                <li>Bird watching</li>
-                <li>Fruit picking</li>
-                <li>Honey harvesting</li>
-                <li>Sport fishing</li>
-                <li>Kitchen Gardening</li>
-            </ul>
-        </section>
-        <!--Accomodation section starts here-->
-        <section id="accomodation">
-            <h2>Accomodation</h2>
-
-            <aside>
-                <h4>Onsite fresh foodstuffs</h4>
-                <p>
-                    You can obtain some fresh foodstuffs freely at the farm for your
-                    private cooking - it's part of the experience :)
-                </p>
-            </aside>
-
-            <div>
-                <h3>Standard Cottage</h3>
-                <p>Features:</p>
-                <ul>
-                    <li>King size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>
-                        Private Kitchen with modern appliances (Gas cooker+electric oven,
-                        dishwasher)
-                    </li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
-            </div>
-
-            <div>
-
-                <h3>Family Cottage</h3>
-
-                <p>Features:</p>
-                <ul>
-                    <li>1 bedroom with King size bed</li>
-                    <li>2 rooms with a Full Double size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>Private Kitchen with modern appliances</li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Images for the gallery section to be placed here.-->
-
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <figure id="gallery1">
-                <img src="https://imgur.com/13Ik1RI" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-
-            <figure id="gallery2">
-                <img src="" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-            <figure id="gallery3">
-                <img src="" />
-                <figcaption>Photo3</figcaption>
-            </figure>
-        </section>
-
+    
         <!--Contact information section starts here-->
 
         <section id="contact">
