--- a/gallery.html
+++ b/gallery.html
@@ -34,165 +34,13 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Gallery.html" class="active">Gallery</a></li>
-                <li> <a href="Contact.html">Contact</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li> <a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--Main Content -->
-    <main>
-        <!--About us section starts here-->
-
-        <section id="about">
-            <h2>About us</h2>
-            <p>
-                Owen's Homestay Resort provides a comfortable, down-to-earth relaxing
-                home feel for a refreshing holiday experience. Located on a 20-acre
-                mixed farm, about 50 Km North of Kampala Capital City, Owen's Homestay
-                Resort offers tranquility away from the hustle and bustle of city.
-                Visit our <a href="#activities">activities</a>
-                section to explore available activities that might interest you during
-                your stay.
-            </p>
-
-            <div>
-                <figure>
-                    <img src="" />
-                    <figcaption>Mango trees at Owen's Homestay</figcaption>
-                </figure>
-            </div>
-        </section>
-        <!--About us section ends here-->
-
-        <!--Activities section starts here-->
-
-        <section id="activities">
-            <h2>Activities</h2>
-            <p>
-                Whether you want to relax and enjoy the sun or discover what the farm
-                has to offer, there are several stress-free activities to keep you
-                engaged with nature in relaxed environment. These include:
-            </p>
-            <ul>
-                <li>Bird watching</li>
-                <li>Fruit picking</li>
-                <li>Honey harvesting</li>
-                <li>Sport fishing</li>
-                <li>Kitchen Gardening</li>
-            </ul>
-        </section>
-        <!--Accomodation section starts here-->
-        <section id="accomodation">
-            <h2>Accomodation</h2>
-
-            <aside>
-                <h4>Onsite fresh foodstuffs</h4>
-                <p>
-                    You can obtain some fresh foodstuffs freely at the farm for your
-                    private cooking - it's part of the experience :)
-                </p>
-            </aside>
-
-            <div>
-                <h3>Standard Cottage</h3>
-                <p>Features:</p>
-                <ul>
-                    <li>King size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>
-                        Private Kitchen with modern appliances (Gas cooker+electric oven,
-                        dishwasher)
-                    </li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
-            </div>
-
-            <div>
-
-                <h3>Family Cottage</h3>
-
-                <p>Features:</p>
-                <ul>
-                    <li>1 bedroom with King size bed</li>
-                    <li>2 rooms with a Full Double size bed</li>
-                    <li>Ensuite bathroom</li>
-                    <li>Private Kitchen with modern appliances</li>
-                    <li>Washing machine</li>
-                    <li>Living area</li>
-                    <li>WiFi</li>
-                    <li>DSTV</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Images for the gallery section to be placed here.-->
-
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <figure id="gallery1">
-                <img src="https://imgur.com/13Ik1RI" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-
-            <figure id="gallery2">
-                <img src="" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-            <figure id="gallery3">
-                <img src="" />
-                <figcaption>Photo3</figcaption>
-            </figure>
-        </section>
-
-        <!--Contact information section starts here-->
-
-        <section id="contact">
-            <h2>Contact us:</h2>
-            <h3>Address:</h3>
-            <p>
-                Wabutungulu-Kirambula Village, <br />
-                Kyetume Parish, <br />
-                Zirobwe Sub county<br />
-                Luwero District, Uganda
-            </p>
-            <p>
-                Tel. +256 123 456 789 <br />
-                Email: info@owenshomestay.net
-            </p>
-            <br />
-
-            <form action="https://formdump.codeinstitute.net/" method="post">
-                <h3>Contact Form</h3>
-
-                <label for="fullname">Full Name</label>
-                <input id="fullname" type="text" name="Customer_Name" required />
-                <br />
-                <label for="email">Your Email</label>
-                <input id="email" type="text" name="Customer_email" required />
-
-                <br />
-
-                <label for="inquiries">Your message</label>
-                <br />
-                <textarea id="inquiries" rows="10" cols="40" name="inquiries"
-                    placeholder="Write your message here.."></textarea>
-                <br />
-                <button tyupe="submit">Submit</button>
-            </form>
-
-            <br />
-
-            <!--Insert here the link to google maps for the physical loacation of the resort-->
-            <iframe src="https://goo.gl/maps/zZSbyq322DnZvtuc7" width="400" height="200"></iframe>
-
-        </section>
-
-    </main>
-
+   
     <!--Footer section starts here-->
 
     <footer>
