--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li> <a href="Contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li> <a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -85,14 +85,6 @@
         <!--Accomodation section starts here-->
         <section id="accomodation">
             <h2>Accomodation</h2>
-
-            <aside>
-                <h4>Onsite fresh foodstuffs</h4>
-                <p>
-                    You can obtain some fresh foodstuffs freely at the farm for your
-                    private cooking - it's part of the experience :)
-                </p>
-            </aside>
 
             <div>
                 <h3>Standard Cottage</h3>
