edited html code to match file

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,8 @@
         </nav>
     </header>
 
-    
+    <!--Main Content -->
+    <main>
         <!--Contact information section starts here-->
 
         <section id="contact">
@@ -102,8 +103,8 @@
 
         <div class="copyright">
             <p class="copyright-jessica">Copyright &copy; 2023 Owen's Homestay Resort</p>
-          </div>
-        
+        </div>
+
 
     </footer>
     <!--Font Awesome kit-->
