--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,32 @@
         </nav>
     </header>
 
-   
+    <!--Main Content -->
+    <main>
+ 
+        <!-- Images for the gallery section to be placed here.-->
+
+        <section id="gallery">
+            <h2>Gallery</h2>
+            <figure id="gallery1">
+                <img src="https://imgur.com/13Ik1RI" />
+                <figcaption>Photo2</figcaption>
+            </figure>
+
+            <figure id="gallery2">
+                <img src="" />
+                <figcaption>Photo2</figcaption>
+            </figure>
+            <figure id="gallery3">
+                <img src="" />
+                <figcaption>Photo3</figcaption>
+            </figure>
+        </section>
+
+
+    </main>
+
+
     <!--Footer section starts here-->
 
     <footer>
@@ -57,8 +82,8 @@
 
         <div class="copyright">
             <p class="copyright-jessica">Copyright &copy; 2023 Owen's Homestay Resort</p>
-          </div>
-        
+        </div>
+
 
     </footer>
     <!--Font Awesome kit-->
