edited index html

--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
             <h2>Contact us:</h2>
             <h3>Address:</h3>
             <p>
-                Wabutungulu-Kirambula Village, <br />
-                Kyetume Parish, <br />
+                Owens Crescent Road, <br />
                 Zirobwe Sub county<br />
                 Luwero District, Uganda
             </p>
