--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 home feel for a refreshing holiday experience. Located on a 20-acre
                 mixed farm, about 50 Km North of Kampala Capital City, Owen's Homestay
                 Resort offers tranquility away from the hustle and bustle of city.
-                Visit our <a href="#activities">activities</a>
-                section to explore available activities that might interest you during
-                your stay.
+                Below are some the activities that might interest you during
+                your stay, of course depending of the season of the year.
             </p>
 
             <div>
@@ -68,7 +67,7 @@
         <!--Activities section starts here-->
 
         <section id="activities">
-            <h2>Activities</h2>
+            <h3>Activities</h3>
             <p>
                 Whether you want to relax and enjoy the sun or discover what the farm
                 has to offer, there are several stress-free activities to keep you
@@ -84,10 +83,10 @@
         </section>
         <!--Accomodation section starts here-->
         <section id="accomodation">
-            <h2>Accomodation</h2>
+            <h3>Accomodation</h3>
 
             <div>
-                <h3>Standard Cottage</h3>
+                <h4>Standard Cottage</h4>
                 <p>Features:</p>
                 <ul>
                     <li>King size bed</li>
@@ -105,7 +104,7 @@
 
             <div>
 
-                <h3>Family Cottage</h3>
+                <h4>Family Cottage</h4>
 
                 <p>Features:</p>
                 <ul>
@@ -120,73 +119,9 @@
                 </ul>
             </div>
         </section>
-
-        <!-- Images for the gallery section to be placed here.-->
-
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <figure id="gallery1">
-                <img src="https://imgur.com/13Ik1RI" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-
-            <figure id="gallery2">
-                <img src="" />
-                <figcaption>Photo2</figcaption>
-            </figure>
-            <figure id="gallery3">
-                <img src="" />
-                <figcaption>Photo3</figcaption>
-            </figure>
-        </section>
-
-        <!--Contact information section starts here-->
-
-        <section id="contact">
-            <h2>Contact us:</h2>
-            <h3>Address:</h3>
-            <p>
-                Wabutungulu-Kirambula Village, <br />
-                Kyetume Parish, <br />
-                Zirobwe Sub county<br />
-                Luwero District, Uganda
-            </p>
-            <p>
-                Tel. +256 123 456 789 <br />
-                Email: info@owenshomestay.net
-            </p>
-            <br />
-
-            <form action="https://formdump.codeinstitute.net/" method="post">
-                <h3>Contact Form</h3>
-
-                <label for="fullname">Full Name</label>
-                <input id="fullname" type="text" name="Customer_Name" required />
-                <br />
-                <label for="email">Your Email</label>
-                <input id="email" type="text" name="Customer_email" required />
-
-                <br />
-
-                <label for="inquiries">Your message</label>
-                <br />
-                <textarea id="inquiries" rows="10" cols="40" name="inquiries"
-                    placeholder="Write your message here.."></textarea>
-                <br />
-                <button tyupe="submit">Submit</button>
-            </form>
-
-            <br />
-
-            <!--Insert here the link to google maps for the physical loacation of the resort-->
-            <iframe src="https://goo.gl/maps/zZSbyq322DnZvtuc7" width="400" height="200"></iframe>
-
-        </section>
-
     </main>
 
     <!--Footer section starts here-->
-
     <footer>
         <ul id="social-networks">
             <li><a href="https://twitter.com/" aria-label="Go to our Twitter page (opens in new tab)" target="_blank"
@@ -201,8 +136,8 @@
 
         <div class="copyright">
             <p class="copyright-jessica">Copyright &copy; 2023 Owen's Homestay Resort</p>
-          </div>
-        
+        </div>
+
 
     </footer>
     <!--Font Awesome kit-->
