--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!--Main Content -->
     <main>
+        <section id="welcome" ></section>
         <!--About us section starts here-->
 
         <section id="about">
