add cover text to welcome image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
     <!--Main Content -->
     <main>
-        <section id="welcome" ></section>
+        <section id="welcome" >
+            <div id="cover-text">
+                <h3>Home away from home; Relaxation and tranquility in the countryside</h3>
+        </section>
         <!--About us section starts here-->
 
         <section id="about">
